--- a/introduce-yourself/styles.css
+++ b/introduce-yourself/styles.css
@@ -15,6 +15,7 @@ body {
 
 img {
     border-radius: 8px;
+    max-width: 80%;
 }
 .center {
     display: block;
@@ -44,6 +45,7 @@ h4{
 
 nav{
     text-align: center;
+    line-height: 3;
 }
 
 nav a{
